BusOne/src/objects/Medical_Event_vod__c.object
<CustomObject>
    <description>This object is used to store medical events. It is not related to the base salesforce.com event (calendar event) object. It has one standard child (event attendees), but custom objects can be added as children to track different attributes of medical events. Medical Event is a top level object with its own security and is referred to in the call reporting functionality.</description>
    <fields>
        <fullName>Account_Attendee_Fields_vod__c</fullName>
        <description>Used to store fields that display on the Account List of the Attendee Selection interface. Format is: ;FieldName1;FieldName2;...FieldNameX;
                     Fields can be from the Account object, or keywords that display special sections, such as Recent Events or MCCP.</description>
        <label>Account Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account for associating an account with a Medical Event.</description>
        <inlineHelpText>Lookup to account for associating an account with a Medical Event.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Events</relationshipLabel>
        <relationshipName>Medical_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Once an event is complete, it can be inactivated so that it does not show up in the call reporting picklists.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to address, filtered based on the selected account for the Medical Event</description>
        <inlineHelpText>Lookup to address, filtered based on the selected account for the Medical Event</inlineHelpText>
        <label>Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address_vod__c.Account_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_vod__c</valueField>
            </filterItems>
            <filterItems>
                <field>Address_vod__c.Inactive_vod__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Medical Events</relationshipLabel>
        <relationshipName>Medical_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Name_vod__c</fullName>
        <description>Alternate name of one medical event used in iRep to show an alpha-bar.</description>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Activity_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the CoBrowse Multichannel Activity header record</description>
        <label>CoBrowse Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipLabel>Medical Events</relationshipLabel>
        <relationshipName>Medical_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Session_vod__c</fullName>
        <description>Stores the MC Engine CoBrowse unique identifier</description>
        <label>CoBrowse Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the CoBrowse presentation selected for the Medical Event</description>
        <label>Presentation</label>
        <referenceTo>Content_Deployment_vod__c</referenceTo>
        <relationshipLabel>Medical Events</relationshipLabel>
        <relationshipName>Medical_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_Session_Status_vod__c</fullName>
        <description>Indicates the status of the CoBrowse session</description>
        <label>CoBrowse Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled_vod</fullName>
                </value>
                <value>
                    <fullName>Completed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Presenter_vod__c</fullName>
        <description>Stores the CoBrowse URL for the presenter</description>
        <label>Presenter URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concur_Report_Name_vod__c</fullName>
        <label>Concur Report Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Attendee_Fields_vod__c</fullName>
        <description>Copy the fields that display on the Contact List on the Attendee Selection page from EM_Event_Rule_vod. Fields can be fields that exist on the Contact object, or keywords that display special sections, such as recent events.</description>
        <label>Contact Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Name_vod__c</fullName>
        <description>Country of Medical Event location</description>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>This field is used to store a description of the Medical Event.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EM_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Medical Events</relationshipLabel>
        <relationshipName>Medical_Events_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>The ending date of the event. If not specified, the ending date is assumed to be the same as the starting date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Display_Name_vod__c</fullName>
        <description>This field is used to support disconnected signature capture for the Events Management product. This value displays on the event sign in sheet. If it is not populated, the Name field value from the event is displayed on sign in sheet.</description>
        <label>Event Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>This is a sample custom field for event type with no special processing.</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KOL</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Amount_vod__c</fullName>
        <description>Holds the amount of the expense of this event.</description>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Post_Status_vod__c</fullName>
        <description>Holds a Success or Fail status based on the attempt to post this event into Concur. If the expense was not yet posted, the status will be null.</description>
        <label>Expense Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_System_External_ID_vod__c</fullName>
        <description>The ID that maps to the expense management system.</description>
        <label>Expense System External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Expense_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used for integration checks</description>
        <label>Failed Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Sample custom field to store location of the event. There is no special processing on this field.</description>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <description>Primary company product that this event is related to. This is a sample field with no special processing.</description>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restolar</fullName>
                </value>
                <value>
                    <fullName>Cholecap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Product__c</fullName>
        <description>Secondary company product that this event is related to. This is a sample field with no special processing.</description>
        <label>Secondary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restolar</fullName>
                </value>
                <value>
                    <fullName>Cholecap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_vod__c</fullName>
        <description>Sponsor of event</description>
        <label>Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>The start date of the event.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>References the Status_vod field on EM_Event_vod for disconnected mode.</description>
        <formula>TEXT(EM_Event_vod__r.Status_vod__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Expense_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that the expense is ready to be posted to the third party expense management system.</description>
        <label>Submit Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_vod__c</fullName>
        <description>Refer the Topic_vod field on the EM_Event_vod that display for TopicWarning in disconnected mode.</description>
        <formula>CASESAFEID(EM_Event_vod__r.Topic_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Attendee_Fields_vod__c</fullName>
        <description>Copy the fields that display on the User List on the Attendee Selection page from EM_Event_Rule_vod. Fields can be fields that exist on the User object, or keywords that display special sections, such as recent events.</description>
        <label>User Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Walk_In_Fields_vod__c</fullName>
        <description>Used to store fields that are entered by walk-in attendees. Format is: ;FieldName1;FieldName2;...FieldNameX;
Fields can be marked as &quot;Required&quot; on the walk-in form by adding a &lt;R&gt; tag after a field name. For example, ;Last_Name_vod&lt;R&gt;;First_Name_vod&lt;R&gt;;Email_vod&lt;R&gt;;</description>
        <label>Walk-In Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Source_vod__c</fullName>
        <description>Web source of event</description>
        <label>Web Source</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Link to the event website.  This is a sample field with no special processing.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zvod_Cobrowse_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place CoBrowse section on layout</description>
        <label>zvod_Cobrowse_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Medical Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Events</pluralLabel>
    <recordTypes>
        <fullName>Award_vod</fullName>
        <active>true</active>
        <description>Used for events where primary focus is awards</description>
        <label>Award_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Medical_event</fullName>
        <active>true</active>
        <description>To create the events by BOT users</description>
        <label>BOT_Medical event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Congress_vod</fullName>
        <active>true</active>
        <description>Congress</description>
        <label>Congress_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investigator_Meeting_vod</fullName>
        <active>true</active>
        <description>Investigator Meeting</description>
        <label>Investigator_Meeting_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Event_vod</fullName>
        <active>true</active>
        <description>Standard record type for Medical Events</description>
        <label>Medical_Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Round_Table_vod</fullName>
        <active>true</active>
        <description>Round Table</description>
        <label>Round_Table_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Satellite_Symposium_vod</fullName>
        <active>true</active>
        <description>Used for remote symposium events</description>
        <label>Satellite_Symposium_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Program_vod</fullName>
        <active>true</active>
        <description>Speaker Program</description>
        <label>Speaker_Program_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop_vod</fullName>
        <active>true</active>
        <description>Used for workshop events</description>
        <label>Workshop_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>StartDateBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date should not be after End Date.</description>
        <errorConditionFormula>Start_Date_vod__c &gt; End_Date_vod__c</errorConditionFormula>
        <errorDisplayField>Start_Date_vod__c</errorDisplayField>
        <errorMessage>End date must be equal or greater than start date.</errorMessage>
    </validationRules>
</CustomObject>